5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1613_1800.log
== SUBMITION (2019-05-01 15:26:36) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
form.mat=(a**2+b**2+c**2/a+b+c)
print(round(form.mat,7)
-- EXECUTION TIME:
0.1924
-- ERROR:
  File "/home/codebench/codes/1613/1800/main.py", line 6
    
                           ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:26:39) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
form.mat=(a**2+b**2+c**2/a+b+c)
print(round(form.mat,7)
-- ERROR:
File "XXXX", line 6
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:28:53) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
form.mat=(a**2+b**2+c**2/a+b+c)
print(round(form.mat,7))
-- EXECUTION TIME:
0.191391
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    form.mat=(a**2+b**2+c**2/a+b+c)
NameError: name 'form' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:28:55) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
form.mat=(a**2+b**2+c**2/a+b+c)
print(round(form.mat,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    form.mat=(a**2+b**2+c**2/a+b+c)
NameError: name 'form' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:02:22) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
form.mat=a**2+b**2+c**2/a+b+c
print(round(form.mat,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    form.mat=a**2+b**2+c**2/a+b+c
NameError: name 'form' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:03:52) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
form.mat=a**2+b**2+c**2/a+b+c>0
print(round(form.mat,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    form.mat=a**2+b**2+c**2/a+b+c>0
NameError: name 'form' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:04:19) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
form.mat(=a**2+b**2+c**2)/(a+b+c)>0
print(round(form.mat,7))
-- ERROR:
File "XXXX", line 4
    form.mat(=a**2+b**2+c**2)/(a+b+c)>0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:04:33) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
form.mat(=a**2+b**2+c**2)/(a+b+c)>0
print(round(form.mat,7))
-- ERROR:
File "XXXX", line 4
    form.mat(=a**2+b**2+c**2)/(a+b+c)>0
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:04:51) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
form.mat=(a**2+b**2+c**2)/(a+b+c)>0
print(round(form.mat,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    form.mat=(a**2+b**2+c**2)/(a+b+c)>0
NameError: name 'form' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:05:33) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
vae=(a**2+b**2+c**2)/(a+b+c)>0
print(round(vae,7))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:05:48) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
vae=(a**2+b**2+c**2)/(a+b+c)>0
print(round(vae,7))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:06:42) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
vae=(a**2+b**2+c**2)/(a+b+c)
print(round(vae,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:06:52) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
vae=(a**2+b**2+c**2)/(a+b+c)
print(round(vae,7))
-- EXECUTION TIME:
0.159661
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
